# DMM-enigma2-plugin-merlinmusicplayer

./: Makefile.am  configure.ac
src/merlinmp3player/: Makefile.am  merlinmp3player.cpp
